--- a/resources/css/personal.css
+++ b/resources/css/personal.css
@@ -1,17 +1,80 @@
-body {
-    background-image: url("/yehoshua/resources/img/fondo.png");
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-attachment: fixed;
-    /* filter: blur(6px); */
+
+html { 
+  height:100%; 
+}
+body { 
+  position:absolute; 
+  top:0; 
+  bottom:0; 
+  right:0; 
+  left:0;
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #343A40;
+  min-height:100%;
+}
+  
+.hero-image {
+  background-image: url("/yehoshua/resources/img/fondo.png");
+  background-color: #cccccc;
+  height: 90%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+  
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+}
+
+.background-info{
+  background-color: rgba(255,255,255,0.8);
+  border-style: solid;
+  border-width: 0.3rem;
+  border-color: rgba(10,81,0, 0.8);
+  border-radius: 20px;
+  padding: 1rem;
+}
+
+.logo-index{
+  border-style: double;
+  border-width: 10px;
+  border-radius: 20px;
+  border-color: rgb(255,255,255);
+  padding: 0.5rem;
+  background-color: rgba(10,81,0,0.4);
 }
 
 .footer {
-    position: fixed;
-    left: 0;
+    position: block;
+    right: 0;
     bottom: 0;
-    width: 100%;
-    background-color: rgb(55, 55, 55);
+    left: 0;
+    padding: 0.3rem;
+    background-color: #343A40;
     color: white;
     text-align: center;
 }
+
+@media screen and (max-width: 320px) {
+  .hero-image {
+    width: 320px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mt-5 {
+    margin-top: 5rem !important;
+  }
+
+  .hero-image {
+    width: 480px;
+  }
+}
+
