--- a/resources/css/personal.css
+++ b/resources/css/personal.css
@@ -1,19 +1,19 @@
-
-html { 
-  height:100%; 
+html {
+  height: 100%;
 }
-body { 
-  position:absolute; 
-  top:0; 
-  bottom:0; 
-  right:0; 
-  left:0;
+
+body {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #343A40;
-  min-height:100%;
+  min-height: 100%;
 }
-  
+
 .hero-image {
   background-image: url("/yehoshua/resources/img/fondo.png");
   background-color: #cccccc;
@@ -24,7 +24,7 @@ body {
   position: relative;
 }
 
-.hero-image-users{
+.hero-image-users {
   background-image: url("/yehoshua/resources/img/errorLogin.jpg");
   background-color: #cccccc;
   height: 90%;
@@ -33,7 +33,7 @@ body {
   background-size: cover;
   position: relative;
 }
-  
+
 .hero-text {
   text-align: center;
   position: absolute;
@@ -43,36 +43,36 @@ body {
   color: black;
 }
 
-.background-info{
-  background-color: rgba(255,255,255,0.8);
+.background-info {
+  background-color: rgba(255, 255, 255, 0.8);
   border-style: solid;
   border-width: 0.3rem;
-  border-color: rgba(10,81,0, 0.8);
+  border-color: rgba(10, 81, 0, 0.8);
   border-radius: 20px;
   padding: 1rem;
 }
 
-.logo-index{
+.logo-index {
   border-style: double;
   border-width: 10px;
   border-radius: 20px;
-  border-color: rgb(255,255,255);
+  border-color: rgb(255, 255, 255);
   padding: 0.5rem;
-  background-color: rgba(10,81,0,0.4);
+  background-color: rgba(10, 81, 0, 0.4);
 }
 
 .footer {
-    position: block;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 0.3rem;
-    background-color: #343A40;
-    color: white;
-    text-align: center;
+  position: block;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0.3rem;
+  background-color: #343A40;
+  color: white;
+  text-align: center;
 }
 
-.fail-icons{
+.fail-icons {
   color: darkred;
   font-size: 1.5rem;
 }
@@ -92,4 +92,3 @@ body {
     width: 480px;
   }
 }
-
