--- a/resources/css/personal.css
+++ b/resources/css/personal.css
@@ -97,7 +97,7 @@ body {
   font-size: 1.5rem;
 }
 
-@media screen and (max-width: 320px) {
+@media (min-width: 320px) {
   .hero-image, 
   .hero-image-logout,
   .hero-image-users {
@@ -105,7 +105,7 @@ body {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media (min-width: 480px) {
   .mt-5 {
     margin-top: 5rem !important;
   }
@@ -114,5 +114,30 @@ body {
   .hero-image-logout,
   .hero-image-users {
     width: 480px;
+  }
+}
+@media (min-width: 600px) {
+  .mt-5 {
+    margin-top: 5rem !important;
+  }
+
+  .hero-image,
+  .hero-image-logout,
+  .hero-image-users {
+    width: 600px;
+  }
+}
+@media(min-width: 768px){
+  .hero-image,
+  .hero-image-logout,
+  .hero-image-users {
+    width: 768px;
+  }
+}
+@media(min-width: 800px){
+  .hero-image,
+  .hero-image-logout,
+  .hero-image-users {
+    width: 100%;
   }
 }
