BD se agrega la tabla de catalogo de aprobaciones y la relacion con la tabla Vendedor, se agregan los names al formulario para poder realizar el envio de los datos

--- a/resources/css/personal.css
+++ b/resources/css/personal.css
@@ -122,6 +122,12 @@ body {
   font-size: 1.5rem;
 }
 
+.text-advertencia{
+  color: rgb(255,20,20);
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
 @media (min-width: 320px) {
 
   .hero-image,
