--- a/resources/css/personal.css
+++ b/resources/css/personal.css
@@ -14,6 +14,15 @@ body {
   min-height: 100%;
 }
 
+.hero-div {
+  background-color: rgb(12, 92, 1);
+  height: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
 .hero-image {
   background-image: url("/yehoshua/resources/img/fondo.png");
   background-color: #cccccc;
@@ -104,6 +113,14 @@ body {
   border-width: 0.3rem;
   border-color: rgba(10, 81, 0, 0.8);
   border-radius: 20px;
+  padding: 1rem;
+}
+
+.background-evento {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-style: solid;
+  border-width: 0.3rem;
+  border-color: rgb(22, 22, 22);
   padding: 1rem;
 }
 
