--- a/resources/css/component.css
+++ b/resources/css/component.css
@@ -12,7 +12,7 @@
 	display: block;
 }
 
-section {
+.section-sect {
 	position: relative;
 	padding: 10em 10%;
 	background: #4ca736;
@@ -483,29 +483,5 @@ svg#bigTriangleColor {
 @media screen and (max-width: 68em) {
 	section {
 		font-size: 80%;
-	}
-}
-
-@media screen and (max-width: 54em) {
-	.column {
-		display: block;
-		width: 100% !important;
-	}
-
-	.text:first-child,
-	.text:nth-child(2) {
-		text-align: center;
-	}
-
-	.icon {
-		margin: 0 auto;
-	}
-
-	.col-2 .column:first-child .icon {
-		margin: 0 auto 50px;
-	}
-
-	.col-2 .column:nth-child(2) .icon {
-		margin: 50px auto 0;
 	}
 }
